# server

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  gh-docker-compose.yml  pyproject.toml  pytest.ini  schema.graphql
.github/: ci.yml  pull_request_template.md
.github/workflows/: ci.yml  flake8.yml  graphql-inspector.yml
apps/blog/: admin.py  factories.py  filters.py  forms.py  models.py  mutations.py  schema.py  serializers.py  translation.py
apps/book/: admin.py  dataloaders.py  enums.py  factories.py  filters.py  forms.py  models.py  mutations.py  resources.py  schema.py  serializers.py  translation.py
apps/common/: admin.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py  tasks.py  translation.py
apps/helpdesk/: admin.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py  translation.py
apps/institution/: admin.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/notification/: admin.py  dataloaders.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py  translation.py
apps/order/: admin.py  apps.py  dataloaders.py  enums.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py  signals.py  tasks.py  translation.py
apps/package/: admin.py  enums.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/payment/: admin.py  enums.py  factories.py  filter_set.py  models.py  mutations.py  schema.py  serializers.py
apps/publisher/: admin.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py  translation.py
apps/school/: admin.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py
apps/user/: admin.py  dataloaders.py  enums.py  factories.py  filters.py  models.py  mutations.py  schema.py  serializers.py  urls.py
config/: asgi.py  auth.py  celery.py  dataloaders.py  enums.py  permissions.py  schema.py  serializers.py  settings.py  urls.py  wsgi.py
scripts/: run_develop.sh  run_prod.sh  run_tests.sh
seed/: district.json  municipality.json  province.json
static/: .empty
templates/: custom_user_page.html
templates/emails/: generic_email.html  order_email.html
utils/: common.py  custom_tags.py  permissions.py  sentry.py  validations.py
utils/graphene/: context.py  enums.py  error_types.py  fields.py  filters.py  mutation.py  (+3 more)
(+161 files in other folders)
