[tool.poetry]
name = "kitab-bazar-server"
version = "1"
description = "Book selling web application"
authors = ["dev-kitab-bazar <dev.togglecorp.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
